# cowork

./: .gitignore  README.md
cli/: .env.example  README.md  firewall.example.yaml  pyproject.toml
cli/cowork/: agent.py  api_client.py  config.py  cron.py  main.py  memoria.py  prompts.py  router.py  theme.py  tools.py  tools_external.py  tracing.py  ui.py  workspace.py
cli/cowork/tools/: __init__.py  base.py  manager.py  registry.py
cli/cowork/tools/builtin/: coding.py  connectors.py  cron.py  document.py  multimodal.py  scratchpad.py  utility.py  workspace.py
cli/docs/: CLI_REFERENCE.md
cli/scripts/: migrate_memory_user_id.py
docs/: Agentic.md  Auth.md  CLI_REFERENCE.md  Concept.md  workflow.html
docs/agentic/: API.md  Intelligence.md  Memoria.md  Memory.md  Operations.md  Overview.md  Tools.md  Workflow.md
