[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cowork"
version = "1.0.0"
description = "Makix Enterprise Agentic CLI Coworker — Manager-Worker Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "cli", "llm", "agentic", "cowork"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "prompt_toolkit>=3.0",
    "aiohttp>=3.8",
]

[project.scripts]
cowork = "cowork.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cowork*"]
